--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,27 @@
-echo # Dependencies > .gitignore
-echo node_modules >> .gitignore
-echo .pnp >> .gitignore
-echo .pnp.js >> .gitignore
-echo # Environment variables >> .gitignore
-echo .env >> .gitignore
-echo .env.local >> .gitignore
-echo .env.development.local >> .gitignore
-echo .env.test.local >> .gitignore
-echo .env.production.local >> .gitignore
-echo # Build directories >> .gitignore
-echo dist >> .gitignore
-echo build >> .gitignore
-echo out >> .gitignore
-echo # Logs >> .gitignore
-echo npm-debug.log* >> .gitignore
-echo yarn-debug.log* >> .gitignore
-echo yarn-error.log* >> .gitignore
-echo # Editor directories >> .gitignore
-echo .idea >> .gitignore
-echo .vscode >> .gitignore
-echo *.swp >> .gitignore
-echo *.swo >> .gitignore
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build directories
+dist
+build
+out
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories
+.idea
+.vscode
+*.swp
+*.swo
